metallb/alb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx
spec:
 selector:
  matchLabels:
   app: nginx
 template:
  metadata:
   labels:
    app: nginx
  spec:
   containers:
    - name: nginx
      image: nginx:1
      ports:
       - name: http
         containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: nginx
spec:
 ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
 selector:
  app: nginx
 type: LoadBalancer
