metallb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-nginx-deploying
 annotations:
  kubernetes.io/ingress.class: nginx
spec:
 rules:
  - host: example.com
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: test-service
          port:
           number: 80
